@@ -1601,17 +1601,6 @@ dnl Starting from 2.0 agent can do web monitoring
 AGENT_LDFLAGS="$AGENT_LDFLAGS $LIBCURL_LDFLAGS"
 AGENT_LIBS="$AGENT_LIBS $LIBCURL_LIBS"
 
-found_iconv="no"
-dnl Check for libiconv [by default - skip]
-LIBICONV_CHECK_CONFIG([no])
-if test "x$found_iconv" != "xyes"; then
-	AC_MSG_ERROR([Unable to use iconv (libiconv check failed)])
-fi
-LDFLAGS="$LDFLAGS $ICONV_LDFLAGS"
-LIBS="$LIBS $ICONV_LIBS"
-
-AC_SUBST(ICONV_CFLAGS)
-
 dnl Check for libpcre, used by Zabbix for regular expressions
 if test "x$server" = "xyes" || test "x$proxy" = "xyes" || test "x$agent" = "xyes"; then
 	LIBPCRE_CHECK_CONFIG([no])
@@ -1629,6 +1618,17 @@ else
 fi
 
 AC_SUBST(LIBPCRE_CFLAGS)
+
+found_iconv="no"
+dnl Check for libiconv [by default - skip]
+LIBICONV_CHECK_CONFIG([no])
+if test "x$found_iconv" != "xyes"; then
+	AC_MSG_ERROR([Unable to use iconv (libiconv check failed)])
+fi
+LDFLAGS="$LDFLAGS $ICONV_LDFLAGS"
+LIBS="$LIBS $ICONV_LIBS"
+
+AC_SUBST(ICONV_CFLAGS)
 
 RANLIB="ranlib"
 AC_SUBST(RANLIB)
